--- a/frontend/src/app/modules/admin/user/user-detail/user-detail.component.html
+++ b/frontend/src/app/modules/admin/user/user-detail/user-detail.component.html
@@ -55,12 +55,19 @@
                     </div>
 
                     <div class="form-group row mb-3">                            
-                        <label for="txtUnidadAcademica" class="col-sm-3 col-form-label">Unidad Académica:
-                            <span class="text-danger form-check-inline" *ngIf="txtUnidadAcademicaReq?.errors?.required"> *</span>
+                        <label for="selAcademicUnit" class="col-sm-3 col-form-label">Unidad Académica:
                         </label>
                         <div class="col-sm-9">
-                        <input type="text" class="form-control" id="txtUnidadAcademica" autocomplete="off" placeholder="Unidad Académica" name="txtUnidadAcademica"
-                                [(ngModel)]="user.unidadAcademica" #txtUnidadAcademicaReq="ngModel" required maxlength="30">
+                            <ng-select [items]="unidadAcademicaOptions" 
+                            name="selAcademicUnit"
+                            id="selAcademicUnit"
+                            bindLabel="label"
+                            bindValue="value"
+                            placeholder="Unidad Académica"
+                            [(ngModel)]="user.unidadAcademica" 
+                            required
+                            maxlength="30">
+                 </ng-select>
                         </div>
                     </div>
 
@@ -76,7 +83,7 @@
                         
                         <button class="btn btn-primary mr-2  me-2 float-left" [disabled]="txtIdReq?.errors?.required ||
                                                                          txtMiddleNameReq?.errors?.required || txtLastNameReq?.errors?.required ||
-                                                                         txtUnidadAcademicaReq?.errors?.required || txtPhoneReq?.errors?.required || txtEmailReq?.errors?.required"
+                                                                         txtPhoneReq?.errors?.required || txtEmailReq?.errors?.required"
                                 (click)="saveOrUpdate()">{{ isUpdate ? "Actualizar" : "Crear" }}</button>
                         <button class="btn btn-secondary mr-2 me-2 float-right" [hidden]="!isUpdate" (click)="showDeleteConfirmation()">Eliminar</button>
                         <button class="btn btn-light mr-2  me-2" (click)="navigateToList()">Cancelar</button>
