--- a/frontend/src/app/modules/reservation/reservation-calendar/reserve-calendar.component.html
+++ b/frontend/src/app/modules/reservation/reservation-calendar/reserve-calendar.component.html
@@ -1,4 +1,18 @@
 <div class="row">
+  <div class="d-flex justify-content-between align-items-center flex-wrap grid-margin">
+      <div>
+        <h4 class="mb-3 mb-md-0">Selección de Sala</h4>
+      </div>
+  </div>
+</div>
+<div class="form-group row mb-4">
+  <div class="col-sm-5">
+      <ng-select [items]="rooms" id="selRoom" name="selRoom" bindLabel="name" bindValue="roomUuid"
+          [(ngModel)]="selectedRoom" (change)="onRoomChange($event)" placeholder="type to search">
+      </ng-select>
+  </div>
+</div>
+<div class="row"  *ngIf="showCalendar">
     <div class="col-md-12">
       <div class="row">
         <div class="col-12 col-md-12">
