--- a/frontend/src/app/modules/reservation/reservation-calendar/reserve-calendar.component.html
+++ b/frontend/src/app/modules/reservation/reservation-calendar/reserve-calendar.component.html
@@ -18,9 +18,7 @@
         <div class="col-12 col-md-12">
           <div class="card">
             <div class="card-body">
-              <full-calendar
-                [options]='calendarOptions'
-              ></full-calendar>
+              <full-calendar #calendar [options]="calendarOptions"></full-calendar>
             </div>
             </div>
         </div>
