--- a/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
+++ b/frontend/src/app/modules/admin/room/room-availability/room-availability.component.html
@@ -8,7 +8,7 @@
                             <span class="text-danger form-check-inline" *ngIf="txtMinReservationTimeReq?.errors?.required"> *</span>
                         </label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="txtMinReservationTime" placeholder="Tiempo en segundos" name="txtMinReservationTime"
+                            <input type="text" class="form-control" id="txtMinReservationTime" placeholder="Tiempo en minutos" name="txtMinReservationTime"
                             [(ngModel)]="roomAvailability.minReservationTime" #txtMinReservationTimeReq="ngModel" required mask="00000">
                         </div>
                     </div>
@@ -17,25 +17,66 @@
                             <span class="text-danger form-check-inline" *ngIf="txtMaxReservationTimeReq?.errors?.required"> *</span>
                         </label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="txtMaxReservationTime" placeholder="Tiempo en segundos" name="txtMaxReservationTime"
+                            <input type="text" class="form-control" id="txtMaxReservationTime" placeholder="Tiempo en minutos" name="txtMaxReservationTime"
                             [(ngModel)]="roomAvailability.maxReservationTime" #txtMaxReservationTimeReq="ngModel" required mask="00000">
                         </div>
                     </div>
                     
-                    <div class="form-group row mb-3">       
-                        <div class="col col-sm-6">
-                            <label for="selBeginTime" class="col-sm-12 col-form-label">Inicio de disponibilidad:</label>
-                            <div class="col-sm-9">
-                                <ngb-timepicker id="selBeginTimeAvailability" [(ngModel)]="roomAvailability.startDateTime" name="selBeginTimeAvailability"></ngb-timepicker>
+                    <div class="form-group row mb-3">
+                        <form class="d-flex range-selection">
+                            <div class="form-group hidden">
+                              <div class="input-group">
+                                <input name="datepicker"
+                                      class="form-control"
+                                      ngbDatepicker
+                                      #datepicker="ngbDatepicker"
+                                      [autoClose]="'outside'"
+                                      (dateSelect)="onDateSelection($event)"
+                                      [displayMonths]="2"
+                                      [dayTemplate]="t"
+                                      outsideDays="hidden"
+                                      [startDate]="fromDate!">
+                                <ng-template #t let-date let-focused="focused">
+                                  <span class="custom-day"
+                                        [class.focused]="focused"
+                                        [class.range]="isRange(date)"
+                                        [class.faded]="isHovered(date) || isInside(date)"
+                                        (mouseenter)="hoveredDate = date"
+                                        (mouseleave)="hoveredDate = null">
+                                    {{ date.day }}
+                                  </span>
+                                </ng-template>
+                              </div>
                             </div>
-                        </div>
-                        <div class="col col-sm-6">
-                            <label for="selEndTime" class="col-sm-12 col-form-label">Fin de disponibilidad:</label>
-                            <div class="col-sm-9">
-                                <ngb-timepicker id="selEndTimeAvailability" [(ngModel)]="roomAvailability.endDateTime" name="selEndTimeAvailability"></ngb-timepicker>
+                            <div class="mb-3">
+                              <div class="input-group" (click)="datepicker.toggle()">
+                                <input #dpAvailabilityFromDate
+                                      class="form-control" placeholder="yyyy-mm-dd"
+                                      name="selAvailabilityBeginDate"
+                                      [(ngModel)]="roomAvailability.startDateTime"
+                                      [value]="formatter.format(fromDate)"
+                                      (input)="fromDate = validateInput(fromDate, dpAvailabilityFromDate.value)">
+                                <button class="input-group-text" type="button">
+                                  <i class="feather icon-calendar icon-md text-muted"></i>
+                                </button>
+                              </div>
                             </div>
-                        </div>                     
+                            <div class="ms-2">
+                              <div class="input-group" (click)="datepicker.toggle()">
+                                <input #dpAvailabilityToDate
+                                      class="form-control" placeholder="yyyy-mm-dd"
+                                      name="selAvailabilityEndDate"
+                                      [(ngModel)]="roomAvailability.endDateTime"
+                                      [value]="formatter.format(toDate)"
+                                      (input)="toDate = validateInput(toDate, dpAvailabilityToDate.value)">
+                                <button class="input-group-text" type="button">
+                                  <i class="feather icon-calendar icon-md text-muted"></i>
+                                </button>
+                              </div>
+                            </div>
+                          </form>
                     </div>
+
                     <div class="form-group row mb-3">                            
                         <label for="chkApprovalRequired" class="col-sm-3F col-form-label">
                             <span></span>
