--- a/frontend/src/app/modules/reservation/reservation-detail/reserve-detail.component.html
+++ b/frontend/src/app/modules/reservation/reservation-detail/reserve-detail.component.html
@@ -63,7 +63,7 @@
                                 #txtMotive="ngModel" maxlength="30">
                         </div>
                     </div>
-                    <div class="form-group row mb-3">
+                    <!--<div class="form-group row mb-3">
                         <label for="selApprovalState" class="col-sm-3 col-form-label">Estado:</label>
                         <div class="col-sm-9">
                             <ng-select [items]="approvalStatus" id="selApprovalState" name="selApprovalState"
@@ -71,7 +71,7 @@
                                 [(ngModel)]=this.selectedState>
                             </ng-select>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="form-group row mb-3">
                         <label for="txtNotes" class="col-sm-3 col-form-label">Notas:
                         </label>
