--- a/frontend/src/app/views/layout/navbar/navbar.component.html
+++ b/frontend/src/app/views/layout/navbar/navbar.component.html
@@ -11,8 +11,8 @@
         <div ngbDropdownMenu class="px-0" aria-labelledby="profileDropdown">
           <div class="d-flex flex-column align-items-center border-bottom px-5 py-3">
             <div class="text-center">
-              <p class="tx-16 fw-bolder">Amiah Burton</p>
-              <p class="tx-12 text-muted">amiahburton@gmail.com</p>
+              <p class="tx-16 fw-bolder">{{userInfo.nombre}} {{userInfo.primerApellido}}</p>
+              <p class="tx-12 text-muted">{{userInfo.email}}</p>
             </div>
           </div>
           <ul class="list-unstyled p-1">
