Control de roles

--- a/frontend/src/app/core/auth/login/login.component.html
+++ b/frontend/src/app/core/auth/login/login.component.html
@@ -14,7 +14,7 @@
             <form class="forms-sample">
               <div class="mb-3">
                 <label for="emailInput" class="form-label">Correo Electr&oacute;nico</label>
-                <input type="email" class="form-control" id="emailInput" placeholder="Correo Electr&oacute;nico" [(ngModel)]="loginForm.username" name="username">
+                <input type="email" class="form-control" id="emailInput" placeholder="Correo Electr&oacute;nico" [(ngModel)]="loginForm.userName" name="username">
               </div>
               <div class="mb-3">
                 <label for="passwordInput" class="form-label">Contraseña</label>
