LDAP debug #8 : Logs deleted

--- a/frontend/src/app/core/auth/login/login.component.html
+++ b/frontend/src/app/core/auth/login/login.component.html
@@ -13,8 +13,8 @@
             <h5 class="text-muted fw-normal mb-4">Escuela de Ingenier&iacute;a</h5>
             <form class="forms-sample">
               <div class="mb-3">
-                <label for="emailInput" class="form-label">Correo Electr&oacute;nico</label>
-                <input type="email" class="form-control" id="emailInput" placeholder="Correo Electr&oacute;nico" [(ngModel)]="loginForm.userName" name="username">
+                <label for="emailInput" class="form-label">Usuario</label>
+                <input type="email" class="form-control" id="emailInput" placeholder="Usuario" [(ngModel)]="loginForm.userName" name="username">
               </div>
               <div class="mb-3">
                 <label for="passwordInput" class="form-label">Contraseña</label>
